# CloudBender

./: .drone.yml  .flake8  .gitignore  .gitmodules  .justfile  .trivyignore.yaml  CHANGES.md  CLAUDE.md  Dockerfile  Dockerfile.python  Dockerfile.rust  Jenkinsfile  Makefile  README.md  builder.just  container.just  dev-requirements.txt  ecr_lifecycle.py  ecr_public_lifecycle.py  git.just  podman.mk  pyproject.toml  python.just  renovate.json  requirements.txt  rust.just  rust_rewrite.md  setup.py  tox.ini  utils.sh
.ci/: CLAUDE.md  Dockerfile.python  README.md  builder.just  common.just  container.just  ecr_lifecycle.py  git.just  gitops.just  podman.mk  python.just  renovate.json
.ci/examples/: Jenkinsfile.gitops-push.groovy
.ci/vars/: buildPodman.groovy  container.groovy  containerBuild.groovy  containerClean.groovy  containerLint.groovy  containerPrepare.groovy  containerPush.groovy  containerScan.groovy  gitea.groovy  justContainer.groovy
cloudbender/: __init__.py  cli.py  connection.py  core.py  exceptions.py  hooks.py  jinja.py  pulumi.py  stack.py  stackgroup.py  utils.py
cloudbender/templates/: kubezero.yaml  outputs.yaml  stack-doc.md
conf/: containers.conf  registries.conf  storage.conf
examples/: Jenkinsfile.gitops-pr.groovy
tests/: test_utils.py
tools/: manual_resource_finder.py
vars/: buildPodman.groovy  containerClean.groovy  containerPush.groovy  containerScan.groovy  containerTest.groovy  gitea.groovy  justContainer.groovy  protectBuildFiles.groovy  quietCheckout.groovy  updateGitops.groovy
