[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cloudbender"
dynamic = ["version"]
authors = [
  { name="Stefan Reimer", email="stefan@zero-downtime.net" },
]
description = "Deploy and maintain infrastructure in automated and trackable manner"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
        "boto3==1.39.0",
        "mock==5.2.0",
        "Jinja2==3.1.6",
        "click==8.2.1",
        "pexpect==4.9.0",
        "python-minifier==2.11.3",
        "cfn-lint==1.36.1",
        "ruamel.yaml==0.18.14",
        "rich==14.0.0",
        "pulumi==3.181.0",
        "pulumi-aws==7.8.0",
        "pulumi-aws-native==1.30.0",
        "pulumi-policy==1.16.0",
        "pulumi-command==1.1.0",
        "pulumi_random==4.18.2",
        ]

classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Operating System :: POSIX",
        "Programming Language :: Python",
        "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.optional-dependencies]
tests = [
  'flake',
  'pytest',
  'twine',
]

[project.urls]
"Homepage" = "https://git.zero-downtime.net/ZeroDownTime/CloudBender"

[project.scripts]
cloudbender = "cloudbender.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.isort]
profile = "black"

