[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cloudbender"
dynamic = ["version"]
authors = [
  { name="Stefan Reimer", email="stefan@zero-downtime.net" },
]
description = "Deploy and maintain infrastructure in automated and trackable manner"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
        "boto3==1.40.61",
        "mock==5.2.0",
        "Jinja2==3.1.6",
        "click==8.3.0",
        "pexpect==4.9.0",
        "python-minifier==2.11.3",
        "cfn-lint==1.40.3",
        "ruamel.yaml==0.18.16",
        "rich==14.2.0",
        "pulumi==3.205.0",
        "pulumi-aws==6.83.1",
        "pulumi-aws-native==1.37.0",
        "pulumi-policy==1.20.0",
        "pulumi-command==1.1.3",
        "pulumi_random==4.18.4",
        ]

classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Operating System :: POSIX",
        "Programming Language :: Python",
        "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.optional-dependencies]
tests = [
  'flake',
  'pytest',
  'twine',
]

[project.urls]
"Homepage" = "https://git.zero-downtime.net/ZeroDownTime/CloudBender"

[project.scripts]
cloudbender = "cloudbender.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "cloudbender/_version.py"

[tool.isort]
profile = "black"

