[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cloudbender"
dynamic = ["version"]
authors = [
  { name="Stefan Reimer", email="stefan@zero-downtime.net" },
]
description = "Deploy and maintain infrastructure in automated and trackable manner"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
        "boto3",
        "mock",
        "Jinja2>=3",
        "click",
        "pexpect",
        "python-minifier",
        "cfn-lint",
        "ruamel.yaml",
        "rich",
        "pulumi",
        "pulumi-aws<7",
        "pulumi-aws-native",
        "pulumi-policy",
        "pulumi-command",
        "pulumi_random",
        ]

classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Operating System :: POSIX",
        "Programming Language :: Python",
        "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.optional-dependencies]
dev = [
  'flake8',
  'pytest',
  'autopep8',
]

[project.urls]
"Homepage" = "https://git.zero-downtime.net/ZeroDownTime/CloudBender"

[project.scripts]
cloudbender = "cloudbender.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "cloudbender/_version.py"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
